# thanosipsum

./: .gitignore  .pdm-python  LICENSE  README.md  app.py  build.sh  config.py  create_tables.py  data_service.py  export_quotes.py  import_quotes.py  models.py  pyproject.toml  quotes.py  quotes_data.json  requirements.txt  swagger.yml  test.md  thanos2.db  thanos3.db
static/css/: contact.css  doc.css  style.css
static/images/: thanos-5.jfif  thanos-6.jfif
static/js/: script.js
templates/: contact.html  documentation.html  home.html
